# DataQA-Triage-Assistant

./: .dockerignore  Dockerfile  README.md  VERIFICATION_REPORT.md  __init__.py  _hf_live_audit.py  _ui_audit.py  app.py  client.py  dataqa_bench_ui_spec.html  environment.py  evaluator.py  governance.py  graders.py  inference.py  mcp_space_audit.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  simulator.py  tasks.py
_hf_space_repo/: .gitignore  Dockerfile  README.md  app.py  dataqa_bench_ui_spec.html  docs  inference.py  openenv.yaml  pyproject.toml  requirements.txt
_hf_space_repo/env/: __init__.py  environment.py  evaluator.py  governance.py  graders.py  models.py  rewards.py  rubrics.py  simulator.py  tasks.py
_hf_space_repo/env/fixtures/: easy_missing_and_dupes.json  hard_conflicts_and_budget.json  medium_type_and_category.json
_hf_space_repo/scripts/: baseline_results.json  evaluate_all.py  validate_project.py
_hf_space_repo/tests/: test_api.py  test_app.py  test_determinism.py  test_evaluator.py  test_governance.py  test_graders.py  test_rewards.py  test_tasks.py
data_quality_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: PROJECT_STRUCTURE.md
env/: __init__.py  environment.py  evaluator.py  governance.py  graders.py  models.py  rewards.py  simulator.py  tasks.py
scripts/: audit_hf_space.py  audit_mcp_space.py  audit_ui.py  baseline_results.json  client.py  run_baseline.py  trajectory_eval_results.json  validate-submission.sh
server/: app.py
tests/: test_api.py  test_app.py  test_evaluator.py  test_tasks.py  (+2 more)
(+6 files in other folders)
