[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-openenv"
version = "0.1.0"
description = "OpenEnv data analysis environment for data quality triage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "data_ana" }
]
keywords = ["openenv", "data-analysis", "rl", "environment"]
dependencies = [
  "pydantic>=2.7,<3.0",
  "openai>=1.0.0",
  "openenv-core>=0.2.0",
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]
